tests/ui/parser/impl-item-const-semantic-fail.stderr
error: associated constant in `impl` without body
  --> $DIR/impl-item-const-semantic-fail.rs:6:5
   |
LL |     const Y: u8;
   |     ^^^^^^^^^^^-
   |                |
   |                help: provide a definition for the constant: `= <expr>;`

error: aborting due to 1 previous error

