tests/ui/parser/impl-item-const-semantic-fail.rs
fn main() {}

struct X;

impl X {
    const Y: u8; //~ ERROR associated constant in `impl` without body
}
